--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -9,6 +9,13 @@
     background-position: center;
     padding-top: 118px;
     padding-bottom: 118px;
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url(../img/mobile-2x.jpg);
+        }
     @media screen and (min-width: 480px) {
     max-width: 480px;
    height: 400px;
@@ -17,6 +24,13 @@
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
                 url(../img/tablet.jpg);
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url(../img/tablet-2x.jpg);
+            }
 }
     @media screen and (min-width: 768px){
         max-width: 768px;
@@ -26,6 +40,13 @@
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                     rgba(47, 48, 58, 0.4)),
                 url(../img/desktop.jpg);
+        @media (min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url(../img/dekstop-2x.jpg);
+            }
     }
     @media screen and (min-width: 1200px){
             max-width: 1600px;
