--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
 }
 
 .nav__menu {
-  display: flex;
+  display: none;
   align-items: center;
 }
 
@@ -80,7 +80,7 @@
 }
 
 .contacts__list {
-  display: flex;
+  display: none;
   align-items: center;
   margin-left: auto;
 }
@@ -98,6 +98,123 @@
   fill: #2196f3;
 }
 
+.menu-open {
+  margin-left: auto;
+  background-color: #FFFFFF;
+  cursor: pointer;
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #FFFFFF;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.menu-clouse {
+  display: block;
+  margin-left: auto;
+  z-index: 1;
+}
+
+.menu-mobile-clouse {
+  margin-bottom: 8px;
+  cursor: pointer;
+}
+.menu-mobile-clouse:hover, .menu-mobile-clouse:focus {
+  fill: #2196F3;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile__link {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+  margin-left: auto;
+}
+.mobile__link:hover, .mobile__link:focus {
+  color: #2196F3;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile__item {
+  margin-bottom: 32px;
+  text-align: left;
+}
+.mobile__item:nth-child(3) {
+  margin-bottom: 0;
+}
+
+.contacts__link-nomb {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.contacts__link-mob {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  margin-bottom: 64px;
+  flex-direction: column-reverse;
+}
+
+.contacts__item-mob {
+  margin-bottom: 64px;
+}
+.contacts__item-mob:nth-child(1) {
+  margin-bottom: 32px;
+}
+
+.team__social-icons-mob {
+  display: flex;
+}
+
+.team__social-icon-list-mob {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.team__social-list-item-mob {
+  padding-left: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.team__social-list-item-mob:nth-child(1) {
+  padding-left: 0;
+}
+.team__social-list-item-mob:nth-child(4) {
+  border-right: none;
+  padding-right: 0;
+}
+
+.button-menu {
+  background-color: #FFFFFF;
+  width: 100vw;
+  margin-right: auto;
+}
+
+.menu-mobile:hover,
+.menu-mobile:focus {
+  fill: #2196F3;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .herou {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/mobile-img.jpg);
   text-align: center;
@@ -108,6 +225,11 @@
   padding-top: 118px;
   padding-bottom: 118px;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .herou {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/mobile-2x.jpg);
+  }
+}
 @media screen and (min-width: 480px) {
   .herou {
     max-width: 480px;
@@ -117,6 +239,11 @@
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/tablet.jpg);
   }
 }
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .herou {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/tablet-2x.jpg);
+  }
+}
 @media screen and (min-width: 768px) {
   .herou {
     max-width: 768px;
@@ -124,6 +251,11 @@
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/desktop.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .herou {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/dekstop-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -652,6 +784,18 @@ button {
   }
 }
 
+.mob-container {
+  width: 100%;
+  padding-left: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
 .herou__title {
   font-family: "Roboto", sans-serif;
   font-weight: 900;
@@ -995,7 +1139,7 @@ h5 {
 }
 
 .nav__menu {
-  display: flex;
+  display: none;
   align-items: center;
 }
 
@@ -1047,7 +1191,7 @@ h5 {
 }
 
 .contacts__list {
-  display: flex;
+  display: none;
   align-items: center;
   margin-left: auto;
 }
@@ -1063,4 +1207,121 @@ h5 {
 .contacts__link:hover, .contacts__link:focus {
   color: #2196f3;
   fill: #2196f3;
+}
+
+.menu-open {
+  margin-left: auto;
+  background-color: #FFFFFF;
+  cursor: pointer;
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #FFFFFF;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.menu-clouse {
+  display: block;
+  margin-left: auto;
+  z-index: 1;
+}
+
+.menu-mobile-clouse {
+  margin-bottom: 8px;
+  cursor: pointer;
+}
+.menu-mobile-clouse:hover, .menu-mobile-clouse:focus {
+  fill: #2196F3;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile__link {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+  margin-left: auto;
+}
+.mobile__link:hover, .mobile__link:focus {
+  color: #2196F3;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile__item {
+  margin-bottom: 32px;
+  text-align: left;
+}
+.mobile__item:nth-child(3) {
+  margin-bottom: 0;
+}
+
+.contacts__link-nomb {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.contacts__link-mob {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  margin-bottom: 64px;
+  flex-direction: column-reverse;
+}
+
+.contacts__item-mob {
+  margin-bottom: 64px;
+}
+.contacts__item-mob:nth-child(1) {
+  margin-bottom: 32px;
+}
+
+.team__social-icons-mob {
+  display: flex;
+}
+
+.team__social-icon-list-mob {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.team__social-list-item-mob {
+  padding-left: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.team__social-list-item-mob:nth-child(1) {
+  padding-left: 0;
+}
+.team__social-list-item-mob:nth-child(4) {
+  border-right: none;
+  padding-right: 0;
+}
+
+.button-menu {
+  background-color: #FFFFFF;
+  width: 100vw;
+  margin-right: auto;
+}
+
+.menu-mobile:hover,
+.menu-mobile:focus {
+  fill: #2196F3;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }/*# sourceMappingURL=main.css.map */
