--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -25,7 +25,7 @@ margin-right: 93px;
     color: #212121;
 }
 .nav__menu {
-    display: flex;
+    display: none;
     align-items: center;
 }
 .nav__item:not(:last-child) {
@@ -80,7 +80,7 @@ margin-right: 93px;
 
 
 .contacts__list {
-    display: flex;
+    display: none;
     align-items: center;
     margin-left: auto;
 }
@@ -99,3 +99,112 @@ margin-right: 93px;
                 fill: #2196f3;
             }
         }
+    // мобільна версія
+.menu-open{
+    margin-left: auto;
+   background-color: #FFFFFF;
+   cursor: pointer;
+}
+.mob-menu{
+   position: fixed;
+   top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #FFFFFF;
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+.menu-clouse{
+display: block;
+    margin-left: auto;
+    z-index: 1;
+}
+.menu-mobile-clouse{
+    
+    margin-bottom: 8px;
+    cursor: pointer;
+    &:hover,
+    &:focus {
+        fill: #2196F3;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+    }
+}
+.mobile__link{
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 40px;
+line-height: 1.17;
+letter-spacing: 0.02em;
+color: #212121;
+margin-left: auto;
+&:hover,
+&:focus{
+    color: #2196F3;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+}
+.mobile__item{
+margin-bottom: 32px;
+text-align: left;
+&:nth-child(3){margin-bottom: 0;}
+}
+.contacts__link-nomb{
+    font-weight: 500;
+        font-size: 34px;
+        line-height: 1.17;
+        letter-spacing: 0.02em;
+        color: #2196F3;
+}
+.contacts__link-mob{
+    font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 28px;
+        letter-spacing: 0.02em;
+        color: #757575;
+        margin-bottom: 64px;
+        flex-direction: column-reverse;
+}
+.contacts__item-mob{
+    margin-bottom: 64px;
+        &:nth-child(1) {
+            margin-bottom: 32px;
+}}
+.team__social-icons-mob{
+    display: flex;
+}
+.team__social-icon-list-mob{
+    font-weight: 500;
+        font-size: 18px;
+        line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+    
+   
+}
+.team__social-list-item-mob{
+    padding-left: 10px;
+    padding-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    &:nth-child(1) {
+        padding-left: 0;
+    }
+
+    &:nth-child(4) {
+        border-right: none;
+        padding-right: 0;}
+}
+.button-menu {
+   
+    background-color: #FFFFFF;
+    width: 100vw;
+   
+    margin-right: auto;
+    
+}
+.menu-mobile:hover,
+.menu-mobile:focus {
+    fill: #2196F3;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);}
