--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -1,11 +1,11 @@
 .about {
+    display: none;
     padding-top: 60px;
     padding-bottom: 60px;
-    display: none;
+    
 }
 .img-ul {
-    display: flex;
-
+    // display: flex;
     align-items: center;
 }
 
