--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './layouts/team';
 @import './layouts/arguments';
 @import './layouts/clients';
+@import './layouts/about';
 @import './layouts/footer';
 @import './layouts/portfolio';
 @import './base/reset';
