--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -113,6 +113,9 @@ margin-right: 93px;
     background-color: #FFFFFF;
     padding-top: 48px;
     padding-bottom: 48px;
+    @media screen and (min-width: 768px) {
+            display: none;
+        }
 }
 .menu-clouse{
 display: block;
@@ -202,9 +205,15 @@ text-align: left;
     width: 100vw;
    
     margin-right: auto;
+   
     
 }
 .menu-mobile:hover,
 .menu-mobile:focus {
     fill: #2196F3;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+.top-div{
+@media screen and (min-width: 768px) {
+        display: none;
+    }
+}
