--- a/sass/layouts/_arguments.scss
+++ b/sass/layouts/_arguments.scss
@@ -45,6 +45,11 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+@media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: nowrap;
+        
+    }
 }
 
 .arguments__title {
