--- a/css/main.css
+++ b/css/main.css
@@ -31,17 +31,37 @@
   display: none;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  .nav__menu {
+    display: flex;
+  }
+}
 
 .nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin-right: 50px;
+    margin-bottom: auto;
+  }
 }
 
-.contacts__svg {
-  margin-right: 10px;
+@media screen and (min-width: 768px) {
+  .contacts__svg {
+    margin-right: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__svg {
+    margin-right: 10px;
+  }
 }
 
 .nav__link {
@@ -84,6 +104,23 @@
   align-items: center;
   margin-left: auto;
 }
+@media screen and (min-width: 768px) {
+  .contacts__list {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+  }
+}
 
 .contacts__link {
   font-weight: 500;
@@ -92,6 +129,9 @@
   letter-spacing: 0.02em;
   color: #757575;
   fill: #757575;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .contacts__link:hover, .contacts__link:focus {
   color: #2196f3;
@@ -102,6 +142,11 @@
   margin-left: auto;
   background-color: #FFFFFF;
   cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .menu-open {
+    display: none;
+  }
 }
 
 .mob-menu {
@@ -224,6 +269,10 @@
   .top-div {
     display: none;
   }
+}
+
+.menu-mobile {
+  margin-right: 25px;
 }
 
 .herou {
@@ -435,6 +484,12 @@
   flex-wrap: wrap;
   gap: 30px;
 }
+@media screen and (min-width: 1200px) {
+  .arguments {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
 
 .arguments__title {
   font-weight: bold;
@@ -505,9 +560,20 @@
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .about {
+    display: flex;
+  }
+}
 
 .img-ul {
   align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .img-ul {
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
 
 .img-ul__li:not(:last-child) {
@@ -563,7 +629,8 @@
 }
 
 .footer-email {
-  Width: 358px;
+  Width: 100%;
+  max-width: 450px;
   Height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -574,13 +641,49 @@
   font-size: 16px;
   line-height: 1.25;
   background-color: #2F303A;
-  margin-right: 12px;
   color: #FFFFFF;
+  margin-bottom: 20px;
+  text-align: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-email {
+    width: 100%;
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-email {
+    width: 100%;
+    max-width: 358px;
+    margin-right: 12px;
+    text-align: start;
+    align-items: flex-start;
+  }
 }
 
 .div-footer-email {
-  margin-left: 93px;
-  margin-top: 12px;
+  margin-left: 0;
+  margin-top: 0;
+}
+@media screen and (min-width: 768px) {
+  .div-footer-email {
+    display: block;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .div-footer-email {
+    margin-left: 93px;
+    margin-top: 12px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .display-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .button-footer-email {
@@ -588,8 +691,7 @@
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  line-height: 30px;
-  align-items: center;
+  line-height: 1.88;
   text-align: center;
   letter-spacing: 0.06em;
   color: #FFFFFF;
@@ -598,38 +700,105 @@
   border-radius: 4px;
   Width: 200px;
   Height: 50px;
-  display: flex;
+  cursor: pointer;
+}
+@media screen and (min-width: 1200px) {
+  .button-footer-email {
+    display: flex;
+  }
 }
 
 .form-footer {
-  display: flex;
+  display: block;
+  align-items: center;
   justify-content: center;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .form-footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form-footer {
+    display: flex;
+    margin-left: 0;
+    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-input-btn {
+    display: flex;
+  }
 }
 
 .svg-button {
   background: #2196F3;
   position: relative;
   left: 10px;
-  display: flex;
+  top: 3px;
 }
 
 .use-svg-button {
   fill: #FFFFFF;
-  position: absolute;
 }
 
 .join {
   display: block;
-  margin-top: 12px;
+  margin-top: 60px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .join {
+    margin: auto;
+    margin-top: 5px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .join {
+    margin-bottom: 41px;
+    margin-left: 0;
+    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: start;
+  }
 }
 
 .logo-and-addres {
   display: block;
-  margin-right: 70px;
+}
+@media screen and (min-width: 768px) {
+  .logo-and-addres {
+    margin-right: 165px;
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo-and-addres {
+    margin-right: 70px;
+  }
 }
 
 .footer-too {
-  display: flex;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-too {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: start;
+  }
 }
 
 .social-icon-list-footer {
@@ -649,6 +818,9 @@
 
 .social-icons {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 60px;
 }
 
 .social-list-item:not(:last-child) {
@@ -909,10 +1081,12 @@ h5 {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 500ms linear, visibility 500ms linear;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -926,10 +1100,12 @@ h5 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
   background-color: #FFFFFF;
   cursor: pointer;
   border-radius: 4px;
+  width: 100%;
+  max-width: 450px;
+  height: 609px;
 }
 
 .modal-clouse-btn {
@@ -1031,7 +1207,7 @@ h5 {
 }
 
 .modal-form {
-  padding: 40px 39px 40px 41px;
+  padding: 40px;
   cursor: pointer;
 }
 
@@ -1048,14 +1224,20 @@ h5 {
 .modal-policy {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #757575;
   margin-bottom: 30px;
   margin-top: 20px;
   display: flex;
   align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .modal-policy {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .modal-chek:checked + .modal-policy span {
   background: #2196F3;
@@ -1171,17 +1353,37 @@ h5 {
   display: none;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  .nav__menu {
+    display: flex;
+  }
+}
 
 .nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin-right: 50px;
+    margin-bottom: auto;
+  }
 }
 
-.contacts__svg {
-  margin-right: 10px;
+@media screen and (min-width: 768px) {
+  .contacts__svg {
+    margin-right: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__svg {
+    margin-right: 10px;
+  }
 }
 
 .nav__link {
@@ -1224,6 +1426,23 @@ h5 {
   align-items: center;
   margin-left: auto;
 }
+@media screen and (min-width: 768px) {
+  .contacts__list {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+  }
+}
 
 .contacts__link {
   font-weight: 500;
@@ -1232,6 +1451,9 @@ h5 {
   letter-spacing: 0.02em;
   color: #757575;
   fill: #757575;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .contacts__link:hover, .contacts__link:focus {
   color: #2196f3;
@@ -1242,6 +1464,11 @@ h5 {
   margin-left: auto;
   background-color: #FFFFFF;
   cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .menu-open {
+    display: none;
+  }
 }
 
 .mob-menu {
@@ -1364,4 +1591,8 @@ h5 {
   .top-div {
     display: none;
   }
+}
+
+.menu-mobile {
+  margin-right: 25px;
 }/*# sourceMappingURL=main.css.map */
