--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -45,7 +45,8 @@
 }
 
 .footer-email {
-    Width: 358px;
+    Width: 100%;
+    max-width: 450px;
     Height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -56,22 +57,51 @@
     font-size: 16px;
     line-height: 1.25;
     background-color: #2F303A;
-    margin-right: 12px;
+    
     color: #FFFFFF;
+    margin-bottom: 20px;
+    text-align: center;
+    align-items: center;
+    @media screen and (min-width: 768px) {
+            width: 100%;
+            max-width: 450px;
+        }
+    @media screen and (min-width: 1200px) {
+        width: 100%;
+        max-width:358px;   
+        margin-right: 12px;
+        text-align:start;
+        align-items:flex-start;
+        }
+    
 }
 
 .div-footer-email {
-    margin-left: 93px;
-    margin-top: 12px;
+    margin-left: 0;
+    margin-top: 0;
+    @media screen and (min-width: 768px) {
+            display: block;
+        }
+    @media screen and (min-width: 1200px) {
+            margin-left: 93px;
+            margin-top: 12px;
+        }
+    
 }
+.display-flex{
+    @media screen and (min-width: 768px){
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+}
+}
 .button-footer-email {
     padding: 10px 28px 10px 29px;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
-    line-height: 30px;
-    align-items: center;
+    line-height: 1.88;
     text-align: center;
     letter-spacing: 0.06em;
     color: #FFFFFF;
@@ -80,36 +110,97 @@
     border-radius: 4px;
     Width: 200px;
     Height: 50px;
-    display: flex;
+    cursor: pointer;
+    
+    @media screen and (min-width: 1200px) {
+            // position: absolute;
+            // bottom:20px;
+            // left: 223px;
+            display: flex;
+        }
+
 }
 
 .form-footer {
-    display: flex;
+    display: block;
+    align-items: center;
     justify-content: center;
+    text-align: center;
+    @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+    @media screen and (min-width: 1200px) {
+            display: flex;
+            margin-left: 0;
+             align-items: flex-start;
+            justify-content: flex-start;
+            text-align: start;
+        }
+    
 }
-
+.footer-input-btn{
+    @media screen and (min-width: 1200px) {
+            display: flex;
+    
+        }
+}
 .svg-button {
     background: #2196F3;
     position: relative;
     left: 10px;
-    display: flex;
+    
+    
+    top: 3px;
 }
 
 .use-svg-button {
     fill: #FFFFFF;
-    position: absolute;
+    // position: absolute;
 }
 .join {
     display: block;
-    margin-top: 12px;
+    margin-top: 60px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    @media screen and (min-width: 768px){
+        margin: auto;
+        margin-top: 5px;
+    }
+    @media screen and (min-width: 1200px) {
+            margin-bottom: 41px;
+            margin-left: 0;
+            align-items: flex-start;
+            justify-content: flex-start;
+            text-align: start;
+        }
+
 }
 .logo-and-addres {
     display: block;
-    margin-right: 70px;
+    @media screen and (min-width: 768px) {
+            margin-right: 165px;
+            margin-bottom: 60px;
+        }
+    @media screen and (min-width: 1200px) {
+            margin-right: 70px;
+        }
+    
 }
 
 .footer-too {
-    display: flex
+    display: block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    @media screen and (min-width: 1200px) {
+            display: flex;
+            align-items: flex-start;
+                justify-content: flex-start;
+                text-align: start;
+            }
 }
 
 .social-icon-list-footer {
@@ -129,6 +220,9 @@
 }
 .social-icons {
             display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 60px;
         }
 
 .social-list-item:not(:last-child) {
