--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -27,17 +27,34 @@ margin-right: 93px;
 .nav__menu {
     display: none;
     align-items: center;
+    @media screen and (min-width: 768px) {
+            display: flex;
+            }
 }
 .nav__item:not(:last-child) {
     margin-right: 50px;
 }
 
 .contacts__item:not(:last-child) {
-    margin-right: 50px;
+    @media screen and (min-width: 768px) {
+            margin-bottom: 10px;
+        }
+
+    @media screen and (min-width: 1200px) {
+            margin-right: 50px;
+            margin-bottom: auto;
+        }
+    
 }
 
 .contacts__svg {
-    margin-right: 10px;
+        @media screen and (min-width: 768px) {
+                margin-right: 8px;
+            }
+        @media screen and (min-width: 1200px) {
+                margin-right: 10px;
+        
+            }
 
 }
 
@@ -83,10 +100,23 @@ margin-right: 93px;
     display: none;
     align-items: center;
     margin-left: auto;
+    @media screen and (min-width: 768px) {
+            display: block;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+     @media screen and (min-width: 1200px) {
+             display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            cursor: pointer;
+         }
 }
 
 .contacts__link {
-  
+   
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -98,12 +128,18 @@ margin-right: 93px;
                 color: #2196f3;
                 fill: #2196f3;
             }
+        align-items: center;
+        justify-content: center;
+        text-align: center;
         }
     // мобільна версія
 .menu-open{
     margin-left: auto;
    background-color: #FFFFFF;
    cursor: pointer;
+    @media screen and (min-width: 768px) {
+            display: none;
+        }
 }
 .mob-menu{
    position: fixed;
@@ -216,4 +252,7 @@ text-align: left;
 @media screen and (min-width: 768px) {
         display: none;
     }
+}
+.menu-mobile{
+    margin-right: 25px;
 }
