--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -24,4 +24,5 @@
         flex-direction: column;
         justify-content: space-between;
         overflow: auto;
+        position: relative;
   }
