--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -12,6 +12,7 @@
     fill: #AFB1B8;
     align-items: center;
     justify-content: center;
+    border-radius: 4px;
         &:hover,
         &:focus {
                 fill: #2196F3;
