--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -4,6 +4,8 @@
     padding-bottom: 60px;
     @media screen and (min-width: 1200px) {
             display: flex;
+            padding-bottom:94px;
+            padding-top: 0;
         }
     
 }
