--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -35,6 +35,7 @@
 .main {
     display: flex;
     flex-wrap: wrap;
+    gap:30px;
 }
 
 .main-p {
@@ -46,10 +47,10 @@
 }
 
 .main-li:not(:nth-child(n+7)) {
-    margin-bottom: 30px;
-        &:not(:nth-child(3n+0)) {
-                margin-right: 30px;
-            }
+    // margin-bottom: 30px;
+    //     &:not(:nth-child(3n+0)) {
+    //             margin-right: 30px;
+    //         }
         &:hover,
         &:focus {
                 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 0.15);
