--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -7,7 +7,6 @@
     padding-top: 16px;
     padding-bottom: 16px;
     border-bottom: 1px solid #ECECEC;
-    position: relative;
         @media screen and (min-width: 768px) {
             padding-top: 24px;
             padding-bottom: 25px;
@@ -57,16 +56,16 @@ margin-right: 93px;
     
 }
 
-// .contacts__svg {
-//         @media screen and (min-width: 768px) {
-//                 margin-right: 8px;
-//             }
-//         @media screen and (min-width: 1200px) {
-//                 margin-right: 10px;
+.contacts__svg {
+        @media screen and (min-width: 768px) {
+                margin-right: 8px;
+            }
+        @media screen and (min-width: 1200px) {
+                margin-right: 10px;
         
-//             }
+            }
 
-// }
+}
 
 .nav__link {
     font-weight: 500;
@@ -146,11 +145,16 @@ margin-right: 93px;
                     font-size: 12px;
                     line-height: 1.16;
                     letter-spacing: 0.02em;
-                    
-                    }
+                    display: flex;
+                    flex-direction: row;
+                    text-align: start;
+                    justify-content: flex-start;
+        }
         @media screen and (min-width: 1200px) {
                     font-size: 14px;
                     line-height: 1.14;
+                    display: flex;
+                        flex-direction: row;
                     }
                 }
     .size-svg{
@@ -159,37 +163,28 @@ margin-right: 93px;
                 height: 10px;
                 align-items: center;
                 justify-content: center;
-                position: absolute;
-                top: 29px;
-                right: 139px;
+            
             }
         @media screen and (min-width: 1200px) {
             width: 16px;
             height: 12px;
             align-items: center;
             justify-content: center;
-            position: absolute;
-            top: 34px;
-            right: 332px;
-
-           
                 }
                 }
     .size-svg-tel{
         @media screen and (min-width: 768px) {
                 width: 10px;
                 height: 14px;
-                position: absolute;
-                top: 54px;
-                right: 139px;
+                align-items: center;
+                justify-content: center;
             }
         
             @media screen and (min-width: 1200px) {
                 width: 10px;
                 height: 16px;
-                position: absolute;
-                top: 30px;
-                right: 147px;
+                align-items: center;
+                justify-content: center;
             }
     }
     // мобільна версія
