--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -62,6 +62,7 @@
                     font-weight: 700;
                     font-size: 36px;
                     line-height: 1.16;
+                    margin-bottom: 50px;
         }
 }
 .team__social-icons {
