--- a/sass/components/_section-tittle.scss
+++ b/sass/components/_section-tittle.scss
@@ -36,9 +36,8 @@ h2 {
         font-style: normal;
         font-weight: 700;
         font-size: 36px;
-        line-height: 1.17;}}
-
-
+        line-height: 1.17;
+        margin-bottom: 50px;}}
 h3 {
     font-weight: bold;
     font-size: 18px;
